--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
   "version": 2,
-  "framework": "vite",
-  "buildCommand": "npm --prefix client install && npm --prefix client run build",
-  "outputDirectory": "client/dist",
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/server/index.js"
+      "destination": "/api/index.js"
     },
     {
       "source": "/(.*)",
