--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "openai": "^4.28.0"
+    "openai": "^4.28.0",
+    "simple-git": "^3.28.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
